--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
     "sequelize-cli": "^6.2.0",
     "sucrase": "^3.19.0",
     "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4"
   }
 }
