--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4"
-  }
+  },
+  "optionalDependencies": {
+    "fsevents": "2.x.x"
+}
 }
